// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`TSC: es6/functionPropertyAssignments FunctionPropertyAssignments1_es6 1`] = `
"var v = { *foo() {
} };
"
`;

exports[`TSC: es6/functionPropertyAssignments FunctionPropertyAssignments5_es6 1`] = `
"var v = { *[foo()]() {
} };
"
`;
